--- a/_extensions/mickaelcanouilfr/scss/_rules.scss
+++ b/_extensions/mickaelcanouilfr/scss/_rules.scss
@@ -479,6 +479,7 @@ pre.code-annotation-code {
 // Tooltips
 .tooltip {
   animation: fadeIn 0.2s ease;
+  font-family: $font-family-system-sans;
 }
 
 // Navbar Tippy theme: dark to match navbar in both colour modes
